--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   flex-direction: column;
 align-items: center;
 }
-@keyframes gradient {
+@keyframes greadient {
 	0% {
     background: linear-gradient(to top, #000000, #000000, #232, #333333);
 	}
