--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   overflow: hidden;
   background-color: black;
 }
+@font-face {   font-family:"din-1451-alt";   src: url("din1451alt.ttf") format("truetype"); }
 .crowbar {
   scale: 50%;
   transform: rotateZ(45deg) translateX(50%);
@@ -22,6 +23,14 @@ body {
   position: relative;
   animation: rotate linear infinite 1s forwards;
  
+}
+h1 {
+  font-weight: lighter;
+
+  font-family: din-1451-alt;
+  font-size: 450%;
+  text-align: center;
+  white-space: nowrap;
 }
 
     ul {
@@ -42,6 +51,9 @@ cursor: pointer;
         text-decoration: none;
         color: #ffc400;
        text-shadow:0 0 10px #ffc400 ;
+       margin-right: 2em;
+       max-width: 6.25%;
+       white-space: nowrap;
      }
 
 .exit:active, .exit:hover:active {
@@ -89,11 +101,16 @@ cursor: pointer;
   z-index: -999;
   filter: blur(5px) opacity(50%);
   scale: 150%;
-
+  position: absolute;
+  transform: translateY(0%);
+  margin-top: -13px;
 }
 .radio {
-
+  margin-top: -13px;
+  position: absolute;
+  transform: translateY(25%);
   z-index: 999;
+
   
 }
 @keyframes marquee {
@@ -110,6 +127,7 @@ cursor: pointer;
 }
 
 .moving {
+  padding-bottom: 200px;
   animation: marquee 4s linear infinite;
 
 }
@@ -145,4 +163,21 @@ cursor: pointer;
 
 .crowbar:active {
  filter:brightness(200%);
+}
+
+.des {
+  text-align: right;
+  margin-left: 1em;
+  font-size: 50%;
+  color: rgb(155, 155, 155);
+
+
+}
+li{
+  display: flex;
+}
+i {
+  display: flex;
+  padding-right: 15px;
+  cursor: pointer;         text-decoration: none;         color: #ffc400;        text-shadow:0 0 10px #ffc400 ;
 }
