--- a/old/backup.css
+++ b/old/backup.css
@@ -2,8 +2,7 @@ body {
     background-color: black;
     color: white;
     font-family: monospace;
-    width: 70%;
-    zoom: 200%;
+    font-size: 275%;
 
 }
 a {
