--- a/old/backup.css
+++ b/old/backup.css
@@ -16,3 +16,29 @@ a:hover {
 .red {
     color: red;
 }
+.prog {
+ appearance: none;
+  width: 75%;
+  height: 4%;
+  background: #3a3a3a;
+  border: white 1px solid;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+    cursor: not-allowed;
+}
+.prog::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 100%;
+  background: #00aeff;
+
+}
+
+.prog::-moz-range-thumb {
+  width: 25px;
+  height: 100%;
+  background: #047baa;
+}
