--- a/style.css
+++ b/style.css
@@ -71,7 +71,21 @@ box-shadow: #ffffff 0px 0px 20px, inset #ffffff 0px 0px 30px;	}
 * {
 	text-transform: lowercase;
 }
-
+button {
+	box-shadow: #ffffff57 0px 0px 20px, inset #ffffff4c 0px 0px 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 125%;
+background: linear-gradient(195deg,rgba(51, 78, 128, 0.539) 0%, rgba(107, 118, 162, 0.283) 100%);
+	color: white;
+	border: 1px solid white;
+	padding: 12px 25px;
+	cursor: pointer;
+	border-radius: 10px;
+}
+button:hover {
+	animation: button 0.5s ease-in-out forwards;
+	animation-direction: forwards;
+}
 body {
 	font-weight: 200%;
 	text-shadow: rgb(255, 255, 255) 0px 0px 80px;
