--- a/style.css
+++ b/style.css
@@ -123,15 +123,16 @@ br {
 }
 
 .content {
-  
-  margin: 25%;
+  margin-bottom: 100%;
+  margin-left: auto;
+  margin-right: auto;
   backdrop-filter: blur(20px);
   border-radius: 50px;
   background-color: rgba(0, 0, 0, 0.39);
   padding-top: 10%;
   scroll-snap-align: start; 
-  min-height: 55%;
-  min-width: 50%;
+  min-height: 550px;
+  min-width: 1000px;
   max-width: max-content;
   flex-flow: row wrap;
   column-gap: 10px;
