--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "SerenityOS Emoji", "Space Mono";
   background-color: black;
   min-height: 100vh;
+
 }
 
 @keyframes slide {
@@ -120,6 +121,7 @@ br {
   height: 100vh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory; 
+  overflow-x:hidden;
 }
 
 .content {
